# indexer-sync

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release-assets.yml
src/: error.rs  jackett.rs  main.rs  sonarr.rs  util.rs  znab.rs
src/destination/: mod.rs  sonarr.rs
src/source/: jackett.rs  mod.rs
test/: all-caps.json  sonarr-indexers.json  sonarr-schemas.json
