[package]
name = "tracker-sync"
version = "0.1.0"
authors = ["Bo Jeanes <me@bjeanes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "cookies", "gzip", "json"] }
tokio = { version = "0.2", features = ["full"] }
clap = { git = "https://github.com/clap-rs/clap/" }
url = { version = "2.1.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }