[package]
name = "indexer-sync"
version = "0.3.0"
authors = ["Bo Jeanes <me@bjeanes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies", "gzip", "json"] }
tokio = { version = "1.8", features = ["full"] }
clap = { git = "https://github.com/clap-rs/clap/" }
url = { version = "2.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
parse_duration = "2.1"
log = "0.4"
pretty_env_logger = "0.4"

[dev-dependencies]
lazy_static = "1.4"
paste = "1.0"
